--- a/src/app/modules/dashboard/main/main.component.html
+++ b/src/app/modules/dashboard/main/main.component.html
@@ -4,7 +4,7 @@
 			<div>Ուզում ես փորձել գիտելիքներդ</div>
 			<div>ուրեմն մասնակցիր <span class="brand" (click)="openModal('about')">Գիտամարտին</span></div>
 			<div>և զարգացրու գիտելիքներդ</div>
-			<app-button>Սկսիր խաղը</app-button>
+			<app-button [routerLink]="'/game'">Սկսիր խաղը</app-button>
 		</app-content>
 	</div>
 	<div class="tournament">
