--- a/src/app/modules/dashboard/tournament-table/tournament-table.component.html
+++ b/src/app/modules/dashboard/tournament-table/tournament-table.component.html
@@ -2,7 +2,7 @@
 	<app-content>
 		<div class="users">
 			<div class="user" *ngFor="let user of users">
-				<span class="name">{{user.firstname}}</span>
+				<span class="name" [class.italic]="user.id == authUser.id">{{user.firstname}}</span>
 				<span class="type">{{user.typeName}}</span>
 				<span class="points">{{user.point}}</span>
 			</div>
