--- a/src/app/ui-fragments/header/header.component.html
+++ b/src/app/ui-fragments/header/header.component.html
@@ -4,6 +4,9 @@
 			<img class="logo" src="/favicon.png" alt="logo" />
 			<ul class="menu" *ngIf="isLoggedIn">
 				<li class="menu-item">
+					<a [routerLink]="'/'">Գլխավոր էջ</a>
+				</li>
+				<li class="menu-item">
 					<a [routerLink]="'/question'">Հարցեր</a>
 				</li>
 				<li class="menu-item border-top">
