start game with two players

--- a/src/app/modules/dashboard/online-users-list/online-users-list.component.scss
+++ b/src/app/modules/dashboard/online-users-list/online-users-list.component.scss
@@ -1,5 +1,6 @@
 .wrapper{
-    height: 369px;
+    height: 402px;
+    overflow: auto;
     border-color: #f8f8f8;
     border-style: solid;
     border-width: 3px;
