--- a/src/app/directives/button/button.component.scss
+++ b/src/app/directives/button/button.component.scss
@@ -17,11 +17,11 @@
     }
     &.default{
         color: #b1b1b1;
-        background-color: #E8E8E8;
+        background-color: #E8E8E8 !important;
     }
     &.warning{
         color: white;
-        background-color: #ed2800;
+        background-color: #ed2800 !important;
     }
     &.with-opacity{
         color: white;
