make user answers graph

--- a/src/app/ui-fragments/header/header.component.html
+++ b/src/app/ui-fragments/header/header.component.html
@@ -29,7 +29,7 @@
 			</span>
 			<ul class="menu">
 				<li class="menu-item">
-					<a [routerLink]="'/user/' + user?.id">Կարգավորումներ</a>
+					<a [routerLink]="'/user/' + user?.id + '/analytics'">Գիտելիքների վերլուծություն</a>
 				</li>
 				<li class="menu-item">
 					<!--<a [routerLink]="'/user'" *ngIf="user?.isAdmin()">manage users</a>-->
