--- a/src/app/modules/dashboard/user/user֊analytics/user֊analytics.component.scss
+++ b/src/app/modules/dashboard/user/user֊analytics/user֊analytics.component.scss
@@ -2,9 +2,16 @@
     width: 90%;
     height: 90%;
     margin: auto;
+    .subject{
+        height: 6%;
+        margin-bottom: 10px;
+        .not-found{
+            margin-top: 10px;
+        }
+    }
     .cytoscape-wrapper {
         width: 100%;
-        height: 100%;
+        height: 90%;
         .cytoscape {
             width: 100%;
             height: 100%;
