make user analytics page

--- a/src/app/directives/button/button.component.html
+++ b/src/app/directives/button/button.component.html
@@ -1,4 +1,4 @@
-<button class="button {{type}}" [style.minWidth]="width" [style.minHeight]="height">
+<button class="{{classList}} button {{type}}" [style.minWidth]="width" [style.minHeight]="height">
 	<i class="icon-edit"></i>
 	<i class="icon-remove"></i>
 	<ng-content></ng-content>
