--- a/src/app/directives/input-group/input-group.component.html
+++ b/src/app/directives/input-group/input-group.component.html
@@ -1,10 +1,13 @@
-<div class="container">
+<div class="container" [class.z-index]="type == inputTypes.dropdown" [style.z-index]="zIndex">
 	<span class="label"><ng-content></ng-content> {{name}}</span>
 	<span class="border"></span>
 	<span class="input-container" [class.disabled]="disabled">
 		<input type="text" class="text-edit text" [(ngModel)]="value"
 		       *ngIf="type == inputTypes.text" (blur)="saveItem()" title="name">
 		<p-dropdown class="text-edit" [(ngModel)]="value"
+		            [options]="items"
+		            optionLabel="name"
+		            (onChange)="saveItem()"
 		            *ngIf="type == inputTypes.dropdown" (blur)="saveItem()" title="name"></p-dropdown>
 	</span>
 </div>
