--- a/src/app/ui-fragments/header/header.component.html
+++ b/src/app/ui-fragments/header/header.component.html
@@ -7,7 +7,7 @@
 					<a [routerLink]="'/'">Գլխավոր էջ</a>
 				</li>
 				<li class="menu-item">
-					<a [routerLink]="'/question'">Հարցեր</a>
+					<a [routerLink]="'/subject'">Առարկաներ</a>
 				</li>
 				<li class="menu-item border-top">
 					<a (click)="openModal('about')">Մեր մասին</a>
