--- a/src/app/modules/dashboard/start-game/start-game.component.scss
+++ b/src/app/modules/dashboard/start-game/start-game.component.scss
@@ -9,7 +9,7 @@
             margin-bottom: 15px;
         }
         .subjects {
-            max-height: 360px;
+            height: 295px;
             overflow: auto;
             .subject {
                 cursor: pointer;
